examples/assignment1/fail_3.out
Parse error at <Line 7, Column 12> : Expect an expression here, encountered nothing.
