examples/assignment1/fail_3.j
/* Test the failure case of:
 *  - empty if/while condition
 **/

class Main {
    Void main() {
        if () {
            return;
        } else {
            return;
        }
    }
}
